# pyGAM

./: .gitignore  .readthedocs.yaml  .ruff.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  agent.md  asv.conf.json  copilot.md  flit.ini  forge.yaml  gen_imgs.py  pygam.py  pylintrc  pyproject.toml  repro_identifiability.py  requirements.txt  setup.py  test_model.json
.github/workflows/: ci.yml  pypi.yml  python-app.yml  test.yml
benchmarks/: bench_fit.py
build_tools/: run_examples.sh
datasets/: cake.csv  coal.csv  hepatitis_A_bulgaria.csv
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  requirements.txt
doc/source/api/: api.rst  expectilegam.rst  gammagam.rst  invgaussgam.rst  lineargam.rst  logisticgam.rst  poissongam.rst  pygam.rst  terms.rst
doc/source/dev-api/: callbacks.rst  link.rst  penalties.rst  terms.rst
doc/source/notebooks/: Quickstart.ipynb  getting_started.ipynb  quick_start.ipynb  tour_of_pygam.ipynb
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: footer.html
docs/_templates/autosummary/: attribute.rst  base.rst  class.rst  function.rst  module.rst  property.rst
docs/api/: api.rst  expectilegam.rst  gammagam.rst  invgaussgam.rst  poissongam.rst
docs/dev-api/: api.rst  callbacks.rst  link.rst  penalties.rst  terms.rst  terms.rst.bak
docs/notebooks/: quick_start.ipynb  tour_of_pygam.ipynb
docs/reference/: index.rst
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  expectilegam.rst  gam.rst  invgaussgam.rst  lineargam.rst  logisticgam.rst  terms.rst
docs/source/dev-api/: api.rst  distributions.rst  penalties.rst  terms.rst
docs/sphinxext/: github_link.py
pygam/: __init__.py  callbacks.py  core.py  distributions.py  exceptions.py  links.py  numexpr_utils.py  penalties.py  pygam.py  sklearn_api.py  smooth_optimizer.py  terms.py  utils.py
pygam/datasets/: __init__.py  blood1.csv  chicago.csv  faithful.csv  head_circumference.csv  load_datasets.py  mcycle.csv
pygam/tests/: conftest.py  test_GAM_api_coverage.py  test_GAM_methods.py  test_GAM_params.py  test_GAM_value_checks.py  test_GAMs.py  test_bugfixes.py  test_callbacks.py  test_core.py  test_datasets.py  test_distributions.py  test_gen_imgs.py  test_get_params.py  test_gridsearch.py  test_issue_340_sklearn_clone.py  test_json_serialization.py  test_links.py  test_loglinks.py  test_negative_binomial.py  test_outer_lambda.py  test_overflow.py  test_p_values.py  test_partial_dependence.py  test_penalties.py  test_serialization.py  test_sklearn_api.py  test_sklearn_compat.py  test_sklearn_compatibility.py  test_sklearn_gridsearch.py  test_sklearn_tags.py  test_smooth_optimizer.py  test_summary_return.py  test_terms.py  test_tweedie.py  test_utils.py
